crates/linesmith/src/tui/snapshots/linesmith__tui__theme_picker__tests__theme_picker_default.snap
---
source: crates/linesmith/src/tui/theme_picker.rs
expression: "render_to_string(&s, 60, 20)"
---
                         pick theme                         
                                                            
                                                            
▶ default                                                   
  minimal                                                   
  catppuccin-latte                                          
  catppuccin-frappe                                         
  catppuccin-macchiato                                      
  catppuccin-mocha                                          
  dracula                                                   
  nord                                                      
  gruvbox                                                   
  tokyo-night                                               
  rose-pine                                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                   • press Enter to apply
